// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AsideLayout aside style overrides 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-t0vnb9=""
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          style={
            Object {
              "background": "red",
              "height": "50px",
              "width": "700px",
            }
          }
        >
          Fixed width thing
        </div>
      </div>
      <div
        data-css-f5f1aw=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout asidePosition: first 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-t0vnb9=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-f5f1aw=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout asidePosition: last 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-t8ydvh=""
    >
      <div
        data-css-9utsi6=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-f5f1aw=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout short aside content 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-t0vnb9=""
      >
        Very short
      </div>
      <div
        data-css-f5f1aw=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout short main content 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-t0vnb9=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-f5f1aw=""
      >
        Very little
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout wide, fixed aside content 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-t0vnb9=""
      >
        <div
          style={
            Object {
              "background": "red",
              "height": "50px",
              "width": "700px",
            }
          }
        >
          Fixed width thing
        </div>
      </div>
      <div
        data-css-f5f1aw=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout four 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-18p75qs=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          First child
        </div>
      </div>
      <div
        data-css-18p75qs=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Second child
        </div>
      </div>
      <div
        data-css-18p75qs=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Third child
        </div>
      </div>
      <div
        data-css-18p75qs=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fourth child
        </div>
      </div>
      <div
        data-css-18p75qs=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fifth child
        </div>
      </div>
      <div
        data-css-18p75qs=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Sixth child
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout six 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-nvudq=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          First child
        </div>
      </div>
      <div
        data-css-nvudq=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Second child
        </div>
      </div>
      <div
        data-css-nvudq=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Third child
        </div>
      </div>
      <div
        data-css-nvudq=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fourth child
        </div>
      </div>
      <div
        data-css-nvudq=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fifth child
        </div>
      </div>
      <div
        data-css-nvudq=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Sixth child
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout three 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-ke1y92=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          First child
        </div>
      </div>
      <div
        data-css-ke1y92=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Second child
        </div>
      </div>
      <div
        data-css-ke1y92=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Third child
        </div>
      </div>
      <div
        data-css-ke1y92=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fourth child
        </div>
      </div>
      <div
        data-css-ke1y92=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fifth child
        </div>
      </div>
      <div
        data-css-ke1y92=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Sixth child
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout two 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-evbaaa=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          First child
        </div>
      </div>
      <div
        data-css-evbaaa=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Second child
        </div>
      </div>
      <div
        data-css-evbaaa=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Third child
        </div>
      </div>
      <div
        data-css-evbaaa=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fourth child
        </div>
      </div>
      <div
        data-css-evbaaa=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Fifth child
        </div>
      </div>
      <div
        data-css-evbaaa=""
      >
        <div
          style={
            Object {
              "background": "#e80a89",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Sixth child
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-yto836=""
  >
    <h2
      className={undefined}
      data-css-10w3axr=""
      size="large"
    >
      My Page
    </h2>
    My content
  </div>
</div>
`;
